popularity-contest (1.45) UNRELEASED; urgency=low

  * Fix typo in debug message emitted from prepop.pl.
  * Correct charset handling in popcon.pl for ISO-8859-1.

 -- Petter Reinholdtsen <pere@debian.org>  Sat, 12 Apr 2008 00:57:32 +0200

popularity-contest (1.44) unstable; urgency=low

  [ Petter Reinholdtsen ]
  * Make sure popanal do not crash when an invalid timestamp is found
    in the POPULARITY-CONTEST-0 header.
  * Remove code in cron.weekly to sleep a random period of time up to
    an hour, to test hypothesis that this was not the reason for the
    increase in submissions seen the last few months.  Possibly
    reopens #440493, #459910.
  * Change popcon.pl to handle the fact that
    /org/ftp.root/debian/dists/stable/main/binary-*/Packages.gz is not
    UTF-8.  Otherwise it would croak on a name containing 'ó'.

 -- Petter Reinholdtsen <pere@debian.org>  Tue, 18 Mar 2008 20:17:48 +0100

popularity-contest (1.43) unstable; urgency=low

  [ Christian Perrier ]
  * Translations:
    - Kannada added. Closes: #422031
    - Hebrew updated. Closes: #445532

  [ Bill Allombert ]
  * Remove popcon-upload-ubuntu and popcon-submit-ubuntu.cgi, dropped
    by Ubuntu.
  * popularity-contest used files regexp:
    - add support for php scripts
    - Add missing $ after .pm. Closes: #431535, Thanks Gerfried Fuchs.
  * cron.weekly, function run_popcon():
    - remove spurious 'sh -c'
    - add -s /bin/sh in case nobody has no shell. Closes: #429405, #431867.
  * cron.weekly, default.conf, FAQ:
    - Add support for HTTP_PROXY. Closes: #365681.
  * Apply patch from Johan Walles to treat all mapped files as recently used
    (which they obviously are).  Closes: #457441, #327693.

  [ Petter Reinholdtsen ]
  * Add code in cron.weekly to sleep a random period of time up to an
    hour, to make sure all clients do not connect at the same time.
    Closes: #440493, #459910.
  * Updated standards-version from 3.7.2 to 3.7.3.  No change needed.