@@ -1,9 +1,15 @@
 popularity-contest (1.45) UNRELEASED; urgency=low
 
+  [ Petter Reinholdtsen ]
   * Fix typo in debug message emitted from prepop.pl.
-  * Correct charset handling in popcon.pl for ISO-8859-1.
+  
+  [ Bill Allombert ]
+  * popcon.pl:
+    - revert changes introduced in 1.44.
+    - Use :encoding(UTF-8) instead of :utf8 when reapding packages files
+    - Add query box linking to <http://qa.debian.org/popcon.php>
 
- -- Petter Reinholdtsen <pere@debian.org>  Sat, 12 Apr 2008 00:57:32 +0200
+ -- Bill Allombert <ballombe@debian.org>  Mon, 05 May 2008 22:00:55 +0200
 
 popularity-contest (1.44) unstable; urgency=low
 
